--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Tracalorie | Meal & Calorie Tracker</title>
 </head>
+
 <body>
     <!--Navbar-->
     <nav>
@@ -35,7 +37,7 @@
                             <label for="item-name">Meal</label>
                         </div>
                         <div class="input-field col s6">
-                            <input type="text" placeholder="Add calories" id="item-calories">
+                            <input type="number" placeholder="Add calories" id="item-calories">
                             <label for="item-calories">Calories</label>
                         </div>
                         <button class="add-btn btn blue darken-3"><i class= "fa fa-plus"></i>Add Meal</button>
@@ -76,9 +78,10 @@
         </ul>
     </div>
 
-    
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
